# 5DataGlowUp_API

./: pyproject.toml  requirements.txt
src/: main.py  requirements.txt
