[tool.poetry]
name = "5dataglowup-api"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "5dataglowup_api" }]

[tool.poetry.dependencies]
python = "3.11.3"
fastapi = "^0.104.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
