[tool.poetry]
name = "5dataglowup-api"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "5dataglowup_api" }]

[tool.poetry.dependencies]
python = "3.11.3"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
taskipy = "^1.12.0"
boto3 = "^1.28.66"
python-dotenv = "^1.0.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]

kill = "kill -9 $(lsof -t -i :8000)"
run = "uvicorn src.main:app --reload"
