[tool.poetry]
name = "5dataglowup-api"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "5dataglowup_api" }]

[tool.poetry.dependencies]
python = "3.11.3"
taskipy = "^1.12.0"
boto3 = "^1.28.66"
isort = "^5.12.0"
fastapi = "0.103.2"
uvicorn = "0.22.0"
python-dotenv = "0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]

kill = "kill -9 $(lsof -t -i :8000)"
run = "uvicorn src.main:app --reload"
